--- a/secretary/auth2.html
+++ b/secretary/auth2.html
@@ -3,9 +3,9 @@
     <script type="text/javascript">
       // Your Client ID can be retrieved from your project in the Google
       // Developer Console, https://console.developers.google.com
-      var CLIENT_ID = '<YOUR_CLIENT_ID>';
+      var CLIENT_ID = '499744196575-9uqbp59kv8pvsmg5g6u5s0ghfm2o48q0.apps.googleusercontent.com';
 
-      var SCOPES = ["https://www.googleapis.com/auth/calendar.readonly"];
+      var SCOPES = ["https://www.googleapis.com/auth/calendar"];
 
       /**
        * Check if current user has authorized this application.
