--- a/old.html
+++ b/old.html
@@ -10,13 +10,19 @@ top:0;
 left:0;
 width: 100%;
 height: 100%;
-//text-align: center;
+text-align: center;
 //background: color;
-background-color: #eee;
+background-color: #222;
 //background-image: url("grid.png");
 //background-repeat: repeat;
-color: #111;
+color: #fff;
 font-family: 'Roboto', sans-serif;
+}
+
+.guy {
+stroke: #000;
+stroke-width: 10px;
+fill: none;
 }
 
 #name {
@@ -31,7 +37,6 @@ font-size: 64px;
 	<div id="name">
 		
 	</div>
-	
 	email : first last @ gmail.com <br>
 	Cornell netID : ask252
 </div>
@@ -42,18 +47,51 @@ d3.select("body")
 	;
 
 svg = d3.select("#name").append("svg")
-	.attr("width", 750)
+	.attr("width", 500)
 	.attr("height", 100)
 	;
 
+
+leng = 20;
+colors = ["#f44", "#ff4", "#4f4", "#4ff", "#44f", "#f4f"]
+//colors = ["#222", "#222","#222","#222","#222", "#2ff"]
+
+var t = svg.selectAll(".pretty")
+	.data(colors)
+	.enter().append("text")
+	.attr("x", 10)
+	.attr("y", 74)
+	.attr("class", "pretty")
+	.text("Agrippa Kellum")
+	.attr("stroke-width", "5")
+	.attr("stroke", function (d) {return d;})
+	.attr("stroke-dasharray", leng+","+ leng*(colors.length-1))
+	.attr("fill", "none")
+	.style("pointer-events", "none")
+	;
+
+function onwards() {
+	t
+		.attr("stroke-dashoffset", function (d, i) {return leng*i;})
+		.transition(d3.transition().duration(1000).ease(d3.easeLinear))
+		//.attr("stroke-dashoffset", 0)
+		.attr("stroke-dashoffset", function (d, i) {return  leng*i + leng*colors.length;})
+		.on("end", onwards)
+		
+		;
+}
+
+onwards();
+	
+	
 f = svg.append("text")
 	.attr("x", 10)
 	.attr("y", 74)
-	.text("Agrippa Spence Kellum")
+	.text("Agrippa Kellum")
+	.attr("stroke-width", "2")
+	.attr("stroke", "#222")
 	.style("font-weight", "100")
 	.attr("fill", "#fff")
-	.on("mouseover", function () {t.attr("display", "true");})
-	.on("mouseout", function () {t.attr("display", "none");})
 	//.attr("display","none")
 	;
 	
