added my own widdle email

--- a/index.html
+++ b/index.html
@@ -11679,7 +11679,7 @@ var author$project$Main$contacts = A2(
 	_List_Nil,
 	_List_fromArray(
 		[
-			A2(author$project$Main$contact, 'mailto:someone@yoursite.com', 'email'),
+			A2(author$project$Main$contact, 'mailto:agrippakellum@gmail.com', 'email'),
 			A2(author$project$Main$contact, 'https://github.com/asktree', 'github'),
 			A2(author$project$Main$contact, 'https://twitter.com/about_agrippa', 'twitter'),
 			A2(author$project$Main$contact, 'https://www.linkedin.com/in/agrippa-k-ba59579a/', 'linkedin'),
